--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^3.7.2",
     "csv-parse": "^4.12.0",
     "dotenv": "^8.2.0",
+    "elapsed-time": "0.0.1",
     "mysql2": "^2.2.5",
     "pg": "^8.4.1"
   },
