--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ node_modules
 Article_Attachments_Old
 Article_Attachments_Old.zip
 Article_Attachments_Updated
+node_modules/.cache/@babel/register/.babel.7.11.6.development.json
